2011-05-24  Timothy Hatcher  <timothy@apple.com>

        Make the Web Inspector bring the right window to the front when docked.

        rdar://problem/9464685
        https://webkit.org/b/61420

        Reviewed by Brian Weinstein.

        * UIProcess/mac/WebInspectorProxyMac.mm:
        (WebKit::WebInspectorProxy::platformBringToFront): Order front the parent window of the Inspector's WKView.
        * UIProcess/win/WebInspectorProxyWin.cpp:
        (WebKit::WebInspectorProxy::platformBringToFront): Ditto.

2011-05-24  Keishi Hattori  <keishi@webkit.org>

        Reviewed by Kent Tamura.

        Disable textfield implementation of <input type=color>. Add INPUT_COLOR feature flag. Add input color sanitizer.
        https://bugs.webkit.org/show_bug.cgi?id=61273

        * Configurations/FeatureDefines.xcconfig: Added INPUT_COLOR feature flag.

2011-05-24  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Dan Bernstein.

        Update the WebProcess sandbox exceptions to silence warnings for a file that is accessed uselessly
        https://bugs.webkit.org/show_bug.cgi?id=61349
        <rdar://problem/9476255>

        * WebProcess/com.apple.WebProcess.sb:

2011-05-24  Mark Rowe  <mrowe@apple.com>

        Fix the 32-bit build.

        Explicitly use uint32_t when encoding / decoding a type that is a typedef of OSType,
        as this is declared as different underlying types in 32- and 64-bit (unsigned long
        vs unsigned int).
        
        * Shared/mac/KeychainAttribute.cpp:
        (CoreIPC::encode):
        (CoreIPC::decode):

2011-05-24  Sam Weinig  <sam@webkit.org>

        Reviewed by Maciej Stachowiak.

        Enable coalesced wheel events
        <rdar://problem/9444786>

        * UIProcess/WebPageProxy.cpp:
        Flip the switch for coalescing wheel events rather than dropping them.

2011-05-24  Sam Weinig  <sam@webkit.org>

        Reviewed by Maciej Stachowiak.
